--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>NewCP</title>
+  <title>Club Penguin Space</title>
   <link rel="stylesheet" href="./style.css" media="screen" type="text/css" />
 </head>
 
 <body>
   <div id="container">
-    <img src="./assets/newcplogin1.png" id="newcplogin">
+    <img src="./assets/cpspacelogin.png" id="cpspacelogin">
   </div>
 </body>
 
